# The_Styx

./: Dockerfile  README.md  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
discord_login/: admin.py  models.py  urls.py  views.py
discord_login/migrations/: 0001_initial.py
game/: models.py  serializers.py  urls.py  views.py
game/migrations/: 0001_initial.py
schedules/: admin.py  models.py  serializers.py  urls.py  views.py
schedules/migrations/: 0001_initial.py  0002_alter_team_game_delete_game.py  0003_alter_scrim_responses.py
the_styx/: .env.sample  asgi.py  settings.py  urls.py  wsgi.py
