[tool.poetry]
name = "the_styx"
version = "0.1.0"
description = ""
authors = ["KimrAndrew <andrewrk1997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
djangorestframework = "^3.13.1"
whitenoise = "^6.0.0"
psycopg2 = "^2.9.3"
fire = "^0.4.0"
gunicorn = "^20.1.0"
requests = "^2.27.1"
django-environ = "^0.8.1"
django-cors-headers = "^3.11.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
